--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -22,7 +22,7 @@
     <img class="down-cloud" src="CSS/images/cloud.png" alt="cloud1.png">
     <br>
     <br>
-        <img src="CSS/images/mountain.png" alt="mountain.png">
+        <img class="mountain" src="CSS/images/mountain.png" alt="mountain.png">
 
 <!--TOP CONTAINER ENDS-->    
 <!--MIDDLE CONTAINER BEGINS-->
